<resources>
    <string name="app_name">Flugsuche</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ankunft">Ankunft</string>
    <string name="abflug">Abflug</string>
    <string name="search">Search</string>
    <string name="von">Datum von</string>
    <string name="bis">Datum bis</string>
    <string name="title_activity_result">Suchergebnisse</string>
    <string name="cancel">cancel</string>
</resources>